# azure_jobs

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: amlt-integration.md  architecture.md  comparison.md  configuration.md  rest-api.md  roadmap.md
src/azure_jobs/: __init__.py  cli.py  conf.py  config.py  const.py  ui.py
src/azure_jobs/cli/: __init__.py  auth.py  config.py  dashboard.py  ds.py  env.py  experiment.py  images.py  init.py  jobs.py  pull.py  quota.py  run.py  sku.py  templates.py  workspace.py
src/azure_jobs/core/: client.py  conf.py  config.py  const.py  distributed.py  log_download.py  record.py  rest_client.py  sku.py  submit.py
src/azure_jobs/core/rest_client/: __init__.py  _arm.py  _auth.py  _blob.py  _extract.py  _factory.py  _jobs.py  _ml_client.py  _resources.py
src/azure_jobs/core/submit/: __init__.py  _command.py  _compute.py  _config.py  _environment.py  _models.py  _storage.py  _submit.py  _volcano.py
src/azure_jobs/tui/: __init__.py  app.py  dashboard.tcss  helpers.py  log_viewer.py  modals.py  workspace.py
src/azure_jobs/utils/: time.py  ui.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_dashboard.py  test_distributed.py  test_merge_confs.py  test_quota.py  test_read_conf.py  test_sku.py  test_submit.py  test_time.py
