[project]
name = "azure_jobs"
dynamic = ["version"]
description = "A fast CLI for submitting and managing Azure ML jobs via pure REST APIs"
readme = "README.md"
authors = [{ name = "HSPK", email = "whxway@whu.edu.cn" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "pyyaml>=6.0.2",
    "rich>=14.3.3",
    "textual>=1.0.0",
    "azure-identity>=1.17.0",
    "requests>=2.31.0",
]

[project.scripts]
aj = "azure_jobs.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/azure_jobs/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["ipykernel>=6.30.1", "pytest>=8.0", "pytest-asyncio>=0.24"]
